# yume

./: .gitignore  CONTRIBUTING.md  README.md  interface.py  pyproject.toml  sampler.py  sampling.py  setup.py  training.py
.github/: FUNDING.yaml
.github/workflows/: hugging-face.yaml  unit-test.yaml
notebooks/: experiment_one.ipynb  mini_training.ipynb
tests/: test_datasets.py  test_demo.py  test_pretrained.py  test_tokenizer.py  test_transformer.py
yume/: __init__.py  __main__.py  config.py  dataset.py  models.py  tokenizer.py  utils.py  yume.py
